# personalcapital2

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
designs/001-agent-first-cli/: plan.md  research.md  tasks.md
docs/: api.md  cli.md  mcp-testing.md  models.md  roadmap.md
src/personalcapital2/: __init__.py  _serialization.py  _validation.py  auth.py  cli.py  client.py  exceptions.py  mcp_server.py  models.py  types.py
src/personalcapital2/parsers/: __init__.py  accounts.py  history.py  holdings.py  performance.py  quotes.py  spending.py  transactions.py
tests/: test_cli.py  test_client.py  test_client_convenience.py  test_mcp_server.py  test_models.py  test_session_recovery.py  test_validation.py
tests/test_parsers/: test_accounts.py  test_history.py  test_holdings.py  test_performance.py  test_quotes.py  test_spending.py  test_transactions.py
