[project]
name = "personalcapital2"
version = "0.1.0"
description = "Python client for the Empower (Personal Capital) unofficial API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["empower", "personal-capital", "finance", "api-client", "investing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.11",
    "hypothesis>=6.0",
    "pre-commit>=4.0",
    "responses>=0.25",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = true
exclude = ["scripts", ".venv"]

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "S", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["personalcapital2"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
