[project]
name = "personalcapital2"
version = "0.2.1"
description = "Python client for the Empower (Personal Capital) unofficial API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["empower", "personal-capital", "finance", "api-client", "investing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2.0"]

[project.urls]
Repository = "https://github.com/wpwilson10/personalcapital2"
Issues = "https://github.com/wpwilson10/personalcapital2/issues"

[project.scripts]
pc2 = "personalcapital2.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.11",

    "pre-commit>=4.0",
    "responses>=0.25",
    "mcp>=1.0,<2.0",
    "anyio[pytest]>=4.0",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = true
exclude = ["scripts", ".venv"]

# mcp SDK (mcp>=1.0) has incomplete type stubs — revisit when SDK types improve
[[tool.pyright.executionEnvironments]]
root = "src/personalcapital2/mcp_server.py"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportArgumentType = false
reportUntypedFunctionDecorator = false
reportUnusedFunction = false
reportMissingTypeArgument = false
reportMissingImports = false

[[tool.pyright.executionEnvironments]]
root = "tests/test_mcp_server.py"
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUntypedFunctionDecorator = false
reportMissingImports = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "S", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["personalcapital2"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
